--- a/README.adoc
+++ b/README.adoc
@@ -12,11 +12,11 @@ of Day program.
 == Example output
 
 ....
-processing pgn_electric_usage_interval_data_Service 1_1_2023-09-01_to_2023-09-30.csv
-  namespace(starttime=datetime.datetime(2023, 9, 1, 0, 0), usage_kwh=0.38, charged_cents=5, tod=2.82, basic=5.52)
-  namespace(starttime=datetime.datetime(2023, 9, 1, 0, 15), usage_kwh=0.35, charged_cents=4, tod=2.6, basic=5.08)
-  [...]
-  namespace(starttime=datetime.datetime(2023, 9, 30, 23, 30), usage_kwh=0.6, charged_cents=4, tod=4.46, basic=8.71)
-  namespace(starttime=datetime.datetime(2023, 9, 30, 23, 45), usage_kwh=0.49, charged_cents=3, tod=3.64, basic=7.11)
-namespace(tod_cost_usd=168.86, basic_cost_usd=208.68, actual_charged=149.87)
+processing 2023-11-08_to_2023-12-10.csv
+    namespace(starttime=datetime.datetime(2023, 11, 8, 0, 0), usage_kwh=0.44, tod_category='off', tod_rate=7.43, tod_cost_cents=3.27, basic_cost_cents=8.56)
+    namespace(starttime=datetime.datetime(2023, 11, 8, 0, 15), usage_kwh=0.44, tod_category='off', tod_rate=7.43, tod_cost_cents=3.27, basic_cost_cents=8.56)
+    [...]
+    namespace(starttime=datetime.datetime(2023, 12, 10, 23, 30), usage_kwh=0.31, tod_category='off', tod_rate=7.43, tod_cost_cents=2.3, basic_cost_cents=6.03)
+    namespace(starttime=datetime.datetime(2023, 12, 10, 23, 45), usage_kwh=0.31, tod_category='off', tod_rate=7.43, tod_cost_cents=2.3, basic_cost_cents=6.03)
+namespace(earliest=datetime.datetime(2023, 11, 8, 0, 0), latest=datetime.datetime(2023, 12, 10, 23, 45), readings=3168, tod_cost_usd=242.42, basic_cost_usd=404.03)
 ....
